# mRGC-3D-Population

./: README.md
mRGC_population_model_human_fovea_Italiano_2022/: README.md  README.txt
mRGC_population_model_human_fovea_Italiano_2022/RGC/: Makefile
mRGC_population_model_human_fovea_Italiano_2022/RGC-fovea/: foveal_tiles.py  pyproject.toml  requirements.txt  stimulate_tile.py  test_installation.sh  threshold_search.py  tps_waveforms.py
mRGC_population_model_human_fovea_Italiano_2022/RGC-fovea/distributions/: GCL_Thickness.csv  IPL_Thickness.csv  Midget_Prop.csv  Nasal_foveal.csv  Temporal_foveal.csv
mRGC_population_model_human_fovea_Italiano_2022/RGC-fovea/helpers/: __init__.py  common.py  hex_calculations.py  plot_neuron_vector.py  plots.mplstyle  spike_detection.py  stim_calculations.py
mRGC_population_model_human_fovea_Italiano_2022/RGC-fovea/primate_cell_generator/: __init__.py  create_tile.py  generate_hoc.py  mass_generate-MichaelΓÇÖs MacBook Pro.py  mass_generate.py  txt_to_swc.sh
mRGC_population_model_human_fovea_Italiano_2022/RGC-fovea/stim/: instr-hex.hoc  instr.hoc  stimHex-foveal.hoc  stimTps-foveal.hoc
mRGC_population_model_human_fovea_Italiano_2022/RGC/biophys/: biophys.hoc
mRGC_population_model_human_fovea_Italiano_2022/RGC/common/: gui.hoc  runCtrl.ses  stim.hoc  util.hoc
mRGC_population_model_human_fovea_Italiano_2022/RGC/mod/: Synapse.mod  Xtra.mod  capump.mod  icat.mod  ih.mod  inap.mod  spike.mod  spikeOptm.mod  vchange.mod
