[tool.poetry]
name = "rgc-fovea"
version = "0.1.0"
description = "Pipeline for mass production, simulation and analysis of (para-)foveal retinal ganglion cell populations."
authors = ["Michael Italiano <michael.italiano39@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8, <3.10"
seaborn = "^0.11.1"
matplotlib = "^3.4.2"
hypothesis = "^6.14.1"
numpy = "^1.21.0"
pytest = "^6.2.4"
scipy = "^1.7.0"
pandas = "^1.3.0"
joblib = "^1.0.1"
PyQt5 = "^5.15.4"
prettytable = "^2.1.0"
multiprocess = "^0.70.12"
scikit-image = "^0.19.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
